# sysml-v2-analyzer

./: CLAUDE.md  Cargo.toml  README.md  sysml.toml
.cargo/: config.toml
crates/adapter/: Cargo.toml  README.md
crates/adapter/src/: connection_resolver.rs  lib.rs  metadata_extractor.rs  state_machine_extractor.rs  symbol_kind_mapper.rs  workspace.rs
crates/adapter/tests/: integration.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml  README.md
crates/codegen/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: diagnostic.rs  domain.rs  lib.rs  util.rs
crates/engine/src/audit/: code_parser.rs  compare.rs  mod.rs  source_map.rs
crates/engine/src/codegen/: filters.rs  hash.rs  mod.rs  regions.rs
crates/engine/src/extraction/: flatten.rs  mod.rs  types.rs
crates/engine/src/validation/: fsm.rs  layers.rs  metadata.rs  mod.rs  ports.rs  ui.rs  workspace_rules.rs
crates/engine/tests/: validation_integration.rs
crates/extract/: Cargo.toml  README.md
crates/extract/src/: lib.rs
crates/gencontract/: Cargo.toml  README.md
crates/gencontract/src/: lib.rs
crates/validate/: Cargo.toml  README.md
crates/validate/src/: lib.rs
docs/: 00-architecture.md  01-adapter.md  02-engine.md  03-domains.md  04-cli.md  05-implementation-phases.md  decisions.md  future-improvements.md  phase-1-adapter.md  phase-2-engine-scaffold.md  phase-3-validation.md  phase-4-extraction.md  phase-6-cli.md
docs/archive/: 01-sysml-v2-adapter.md  01-sysml-v2-parser.md  02-sysml-v2-lsp.md  03-tree-sitter-sysml-v2.md  04-sysml-v2-validate.md  05-sysml-v2-extract.md  06-sysml-v2-gencontract.md  07-sysml-v2-codegen.md  08-sysml-v2-cli.md  09-evaluation-syster-base.md  10-revised-plan.md  ANALYSIS.md  phase-2-engine-scaffold.md  phase-3-validation.md  phase-5-codegen.md
domains/firmware/: domain.toml
domains/firmware/templates/rust/: module.rs.j2  state_machine.rs.j2  test.rs.j2
domains/template/: domain.toml  template_library.sysml
domains/template/templates/rust/: module.rs.j2
languages/c/: audit.scm
languages/rust/: audit.scm
tests/fixtures/: audio_pipeline.sysml  bt_a2dp_sink.sysml  firmware_library.sysml  i2s_output.sysml  interfaces.sysml  large_model.sysml  malformed.sysml  status_led.sysml  ui_bad_bounds.sysml  ui_bad_refs.sysml  ui_hardware.sysml
