[workspace]
resolver = "2"
members = [
    "crates/adapter",
    "crates/engine",
    "crates/cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal crates
sysml-v2-adapter = { path = "crates/adapter" }
sysml-v2-engine = { path = "crates/engine" }

# External — parser foundation
syster-base = "=0.4.0-alpha"

# External — shared
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
petgraph = "0.7"
minijinja = { version = "2", features = ["loader"] }
sha2 = "0.10"
globset = "0.4"
proptest = "1"
