[package]
name = "sysml-v2-codegen"
version = "0.1.0"
description = "Code generation from SysML v2 models and generation contracts"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-extract.workspace = true
sysml-v2-gencontract.workspace = true
serde.workspace = true
thiserror.workspace = true
