[package]
name = "sysml-v2-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
petgraph.workspace = true
serde_yml.workspace = true
minijinja.workspace = true
sha2.workspace = true
