[package]
name = "sysml-v2-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
petgraph.workspace = true
serde_yml.workspace = true

tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true

[dev-dependencies]
proptest.workspace = true
