[package]
name = "sysml-v2-extract"
version = "0.1.0"
description = "Extract SysML v2 models to YAML/JSON for code generation"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-adapter.workspace = true
sysml-v2-validate.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
