[package]
name = "sysml-v2-gencontract"
version = "0.1.0"
description = "Generation contract schema and cross-validation"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-extract.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
