[package]
name = "sysml-v2-validate"
version = "0.1.0"
description = "Firmware-specific SysML v2 model validation rules"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sysml-v2-adapter.workspace = true
petgraph.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
